syntax = "proto3";

package ru.hse.lmsteam.proto.homeworks;

option java_multiple_files = true;
option java_package = "ru.hse.lmsteam.schema.api.homeworks";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "ru/hse/lmsteam/proto/common/pageable.proto";
import "ru/hse/lmsteam/proto/lessons/lessons_api.proto";

message GetHomework {
  message Response {
    Homework homework = 1;
  }
}

message CreateOrUpdateHomework {
  message Request {
    string lesson_id = 1;
    google.protobuf.Timestamp deadline_date = 2;
    google.protobuf.Timestamp publish_date = 3;
    bool is_group_work = 4;
    string title = 5;
    string description = 6;
    string grading_criteria = 7;
    repeated string external_material_urls = 8;
  }

  message Response {
    Homework homework = 1;
  }
}

message DeleteHomework {
  message Response {
    int64 entries_deleted = 1;
  }
}

message GetHomeworks {
  message Response {
    ru.hse.lmsteam.proto.common.Page page = 1;
    repeated HomeworkSnippet homeworks = 2;
  }
}

message Homework {
  string id = 1;
  ru.hse.lmsteam.proto.lessons.LessonSnippet lesson = 2;
  google.protobuf.Timestamp deadline_date = 3;
  google.protobuf.Timestamp publish_date = 4;
  bool is_group_work = 5;
  string title = 6;
  string description = 7;
  string grading_criteria = 8;
  repeated string external_material_urls = 9;
}

message HomeworkSnippet {
  string id = 1;
  ru.hse.lmsteam.proto.lessons.LessonSnippet lesson = 2;
  string title = 3;
  google.protobuf.Timestamp deadline_date = 4;
}